--- a/.github/workflows/azure-dev.yml
+++ b/.github/workflows/azure-dev.yml
@@ -3,68 +3,99 @@ name: 'Azure Dev'
 on:
   workflow_dispatch:
   push:
-    # Run when commits are pushed to mainline branch (main or master)
-    # Set this to the mainline branch you are using
     branches:
-      - main
+    - main
 
-# GitHub Actions workflow to deploy to Azure using azd
-# To configure required secrets for connecting to Azure, simply run `azd pipeline config`
-
-# Set up permissions for deploying with secretless Azure federated credentials
-# https://learn.microsoft.com/en-us/azure/developer/github/connect-from-azure?tabs=azure-portal%2Clinux#set-up-azure-login-with-openid-connect-authentication
 permissions:
   id-token: write
   contents: read
 
+env:
+  AZURE_RESOURCE_GROUP_NAME: 'rg-${{ vars.AZURE_ENV_NAME }}'
+  AZURE_FNCAPP_NAME: 'fncapp-${{ vars.AZURE_ENV_NAME }}'
+  AZURE_APIM_NAME: 'apim-${{ vars.AZURE_ENV_NAME }}'
+
 jobs:
-  build:
+  build-test:
+    name: Build & Test
+
     runs-on: ubuntu-latest
-    env:
-      AZURE_CLIENT_ID: ${{ vars.AZURE_CLIENT_ID }}
-      AZURE_TENANT_ID: ${{ vars.AZURE_TENANT_ID }}
-      AZURE_SUBSCRIPTION_ID: ${{ vars.AZURE_SUBSCRIPTION_ID }}
-      AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
+
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+    - name: Checkout
+      uses: actions/checkout@v3
 
-      - name: Install azd
-        uses: Azure/setup-azd@v0.1.0
+    - name: Setup .NET SDK
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: 7.x
 
-      - name: Log in with Azure (Federated Credentials)
-        if: ${{ env.AZURE_CLIENT_ID != '' }}
-        run: |
-          azd auth login `
-            --client-id "$Env:AZURE_CLIENT_ID" `
-            --federated-credential-provider "github" `
-            --tenant-id "$Env:AZURE_TENANT_ID"
-        shell: pwsh
+    - name: Restore NuGet packages
+      shell: bash
+      run: |
+        dotnet restore
 
-      - name: Log in with Azure (Client Credentials)
-        if: ${{ env.AZURE_CREDENTIALS != '' }}
-        run: |
-          $info = $Env:AZURE_CREDENTIALS | ConvertFrom-Json -AsHashtable;
-          Write-Host "::add-mask::$($info.clientSecret)"
+    - name: Build solution
+      shell: bash
+      run: |
+        dotnet build -c Release
 
-          azd auth login `
-            --client-id "$($info.clientId)" `
-            --client-secret "$($info.clientSecret)" `
-            --tenant-id "$($info.tenantId)"
-        shell: pwsh
-        env:
-          AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
+    - name: Test solution
+      shell: bash
+      run: |
+        dotnet test -c Release
 
-      - name: Provision Infrastructure
-        run: azd provision --no-prompt
-        env:
-          AZURE_ENV_NAME: ${{ vars.AZURE_ENV_NAME }}
-          AZURE_LOCATION: ${{ vars.AZURE_LOCATION }}
-          AZURE_SUBSCRIPTION_ID: ${{ vars.AZURE_SUBSCRIPTION_ID }}
+    - name: Create artifact
+      shell: bash
+      run: |
+        dotnet publish -c Release
 
-      - name: Deploy Application
-        run: azd deploy --no-prompt
-        env:
-          AZURE_ENV_NAME: ${{ vars.AZURE_ENV_NAME }}
-          AZURE_LOCATION: ${{ vars.AZURE_LOCATION }}
-          AZURE_SUBSCRIPTION_ID: ${{ vars.AZURE_SUBSCRIPTION_ID }}
+    - name: Upload artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: apiapp
+        path: src/Assistant.ApiApp/bin/Release/net7.0/publish
+
+  deploy:
+    name: Deploy
+
+    needs:
+    - build-test
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Download artifact
+      uses: actions/download-artifact@v2
+      with:
+        name: apiapp
+        path: published/apiapp
+
+    - name: Login to Azure
+      uses: azure/login@v1
+      with:
+        client-id: ${{ vars.AZURE_CLIENT_ID }}
+        tenant-id: ${{ vars.AZURE_TENANT_ID }}
+        subscription-id: ${{ vars.AZURE_SUBSCRIPTION_ID }}
+
+    - name: Deploy API app to Azure
+      uses: azure/webapps-deploy@v2
+      with:
+        app-name: '${{ env.AZURE_FNCAPP_NAME }}-aoai'
+        package: published/apiapp
+
+    - name: Update APIM settings
+      shell: bash
+      run: |
+        functionKey=$(az functionapp keys list \
+          --resource-group "${{ env.AZURE_RESOURCE_GROUP_NAME }}" \
+          --name "${{ env.AZURE_FNCAPP_NAME }}-aoai" \
+          --query "functionKeys.default" \
+          --output tsv)
+
+        az apim nv update \
+          --resource-group ${{ env.AZURE_RESOURCE_GROUP_NAME }} \
+          --service-name ${{ env.AZURE_APIM_NAME }} \
+          --named-value-id "X_FUNCTIONS_KEY_AOAI" \
+          --value $functionKey \
+          --secret true
