--- a/infra/openapi-aoai.yaml
+++ b/infra/openapi-aoai.yaml
@@ -22,20 +22,40 @@ paths:
           text/plain:
             schema:
               type: string
+            examples:
+              prompt:
+                value: Show me the APIM policy document in general.
         required: true
       responses:
         '200':
           description: This returns the completion generated from the OpenAI API.
           content:
-            text/plain:
+            text/markdown:
               schema:
                 type: string
+              examples:
+                completion:
+                  value: "```xml\n<policies>\n  <inbound />\n  <backend>\n    <forward-request />\n  </backend>\n  <outbound />\n  <on-error />\n</policies>\n```"
           x-ms-summary: The completion generated from the OpenAI API.
         '400':
           description: This indicates the request is invalid.
+          content:
+            text/plain:
+              schema:
+                type: string
+              examples:
+                error:
+                  value: The prompt is required.
           x-ms-summary: Invalid request.
         '500':
           description: This indicates the server is not working as expected.
+          content:
+            text/plain:
+              schema:
+                type: string
+              examples:
+                error:
+                  value: Internal server error.
           x-ms-summary: Internal server error.
       security:
         - function_key: [ ]
