--- a/src/Assistant.ApiApp/local.settings.sample.json
+++ b/src/Assistant.ApiApp/local.settings.sample.json
@@ -20,5 +20,8 @@
     "Prompt__Assistants__0": "```xml\n<policies>\n  <inbound>\n    <cors>\n      <allowed-origins>\n        <origin>https://make.powerautomate.com</origin>\n        <origin>https://make.powerapps.com</origin>\n      </allowed-origins>\n      <allowed-methods preflight-result-max-age=\"300\">\n        <method>GET</method>\n        <method>POST</method>\n        <method>PUT</method>\n        <method>DELETE</method>\n        <method>PATCH</method>\n      </allowed-methods>\n      <allowed-headers>\n        <header>*</header>\n      </allowed-headers>\n      <expose-headers>\n        <header>*</header>\n      </expose-headers>\n    </cors>\n</inbound>\n  <backend>\n    <forward-request />\n  </backend>\n  <outbound />\n  <on-error />\n</policies>\n```",
     "Prompt__Assistants__1": "```xml\n<policies>\n  <inbound>\n    <set-variable name=\"IsMobile\" value=\"@(context.Request.Headers.GetValueOrDefault(\"User-Agent\", \"\").ToLowerInvariant().Contains(\"iphone\") || context.Request.Headers.GetValueOrDefault(\"User-Agent\", \"\").ToLowerInvariant().Contains(\"ipad\"))\" />\n  </inbound>\n  <backend>\n    <base />\n  </backend>\n  <outbound>\n    <base />\n  </outbound>\n  <on-error>\n    <base />\n  </on-error>\n</policies>\n```",
     "Prompt__Assistants__2": "```xml\n<policies>\n  <inbound>\n    <rewrite-uri template=\"/products?id={id}\" copy-unmatched-params=\"true\" />\n    <set-backend-service base-url=\"https://fabrikam.com/api\" />\n  </inbound>\n  <backend>\n    <base />\n  </backend>\n  <outbound>\n    <base />\n  </outbound>\n  <on-error>\n    <base />\n  </on-error>\n</policies>\n```"
+  },
+  "Host": {
+    "CORS": "*"
   }
 }
