--- a/src/Assistant.FacadeApp/local.settings.sample.json
+++ b/src/Assistant.FacadeApp/local.settings.sample.json
@@ -16,6 +16,6 @@
     "MSGraph__ClientSecret": "{{AZURE_AD_CLIENT_SECRET}}"
   },
   "Host": {
-    "CORS": "*"
+    "CORS": "https://localhost:5001;http://localhost:5000"
   }
 }
