--- a/src/Assistant.FacadeApp/local.settings.sample.json
+++ b/src/Assistant.FacadeApp/local.settings.sample.json
@@ -16,6 +16,7 @@
     "MSGraph__ClientSecret": "{{AZURE_AD_CLIENT_SECRET}}"
   },
   "Host": {
-    "CORS": "https://localhost:5001;http://localhost:5000"
+    "LocalHttpPort": 7071,
+    "CORS": "*"
   }
 }
