--- a/src/Assistant.FacadeApp/Assistant.FacadeApp.csproj
+++ b/src/Assistant.FacadeApp/Assistant.FacadeApp.csproj
@@ -12,27 +12,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <OpenApiReference Include="..\..\infra\swagger-apim-aoai.json" CodeGenerator="NSwagCSharp" Namespace="ApimAIAssistant.FacadeApp.Proxies" ClassName="AoaiProxyClient" Link="OpenAPIs\swagger-apim-aoai.json" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Microsoft.Azure.Functions.Worker" Version="1.18.0" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Http" Version="3.0.13" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.OpenApi" Version="1.5.1" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk" Version="1.13.0" />
-    <PackageReference Include="Microsoft.Extensions.ApiDescription.Client" Version="7.0.9">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-    <PackageReference Include="NSwag.ApiDescription.Client" Version="13.19.0">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Assistant.Models.Examples\Assistant.Models.Examples.csproj" />
+    <ProjectReference Include="..\Assistant.Proxies.AssistantProxy\Assistant.Proxies.AssistantProxy.csproj" />
   </ItemGroup>
 
   <ItemGroup>
