--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -85,7 +85,7 @@
       "description": "Choose which project to start",
       "options": [
         "Assistant.ApiApp",
-        "Assistant.FacadeApp"
+        "Assistant.ApiApp.SwaFacade"
       ]
     }
   ]
