--- a/src/Assistant.ApiApp/Assistant.ApiApp.csproj
+++ b/src/Assistant.ApiApp/Assistant.ApiApp.csproj
@@ -7,8 +7,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 
-    <AssemblyName>ApimAIAssistant.ApiApp</AssemblyName>
-    <RootNamespace>ApimAIAssistant.ApiApp</RootNamespace>
+    <AssemblyName>ApimPolicyAssistant.ApiApp</AssemblyName>
+    <RootNamespace>ApimPolicyAssistant.ApiApp</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
