--- a/src/Assistant.Services.AssistantProxy/Assistant.Services.AssistantProxy.csproj
+++ b/src/Assistant.Services.AssistantProxy/Assistant.Services.AssistantProxy.csproj
@@ -6,20 +6,12 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 
-    <AssemblyName>ApimAIAssistant.Facades.SwaFacade</AssemblyName>
-    <RootNamespace>ApimAIAssistant.Facades.SwaFacade</RootNamespace>
+    <AssemblyName>ApimPolicyAssistant.Services.AssistantProxy</AssemblyName>
+    <RootNamespace>ApimPolicyAssistant.Services.AssistantProxy</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="OpenAPIs\**" />
-    <EmbeddedResource Remove="OpenAPIs\**" />
-    <None Remove="OpenAPIs\**" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <OpenApiReference Include="OpenAPIs\v3.yaml" CodeGenerator="NSwagCSharp" Namespace="ApimAIAssistant.Facades.SwaFacade" ClassName="SwaFacadeClient">
-      <SourceUri>http://localhost:7071/api/openapi/v3.yaml</SourceUri>
-    </OpenApiReference>
+    <OpenApiReference Include="..\..\infra\swagger-apim-aoai.json" CodeGenerator="NSwagCSharp" Namespace="ApimPolicyAssistant.Services.AssistantProxy" ClassName="AssistantProxyClient" Link="OpenAPIs\swagger-apim-aoai.json" />
   </ItemGroup>
 
   <ItemGroup>
