--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,14 @@
 {
   "dotnet.defaultSolution": "ApimPolicyAssistant.sln",
 
-  // ⬇️⬇️⬇️ Uncomment the following two lines if you want to debug API app. ⬇️⬇️⬇️
-  "azureFunctions.deploySubpath": "src/Assistant.ApiApp/bin/Release/net7.0/publish",
-  "azureFunctions.projectSubpath": "src/Assistant.ApiApp",
+  // ⬇️⬇️⬇️ Uncomment the following two lines if you want to debug the API app. ⬇️⬇️⬇️
+  // "azureFunctions.deploySubpath": "src/Assistant.ApiApp/bin/Release/net7.0/publish",
+  // "azureFunctions.projectSubpath": "src/Assistant.ApiApp",
   // ⬆️⬆️⬆️ Uncomment the above two lines if you want to debug API app. ⬆️⬆️⬆️
 
-  // ⬇️⬇️⬇️ Uncomment the following two lines if you want to debug API app. ⬇️⬇️⬇️
-  // "azureFunctions.deploySubpath": "src/Assistant.FacadeApp/bin/Release/net7.0/publish",
-  // "azureFunctions.projectSubpath": "src/Assistant.FacadeApp",
+  // ⬇️⬇️⬇️ Uncomment the following two lines if you want to debug the facade API app. ⬇️⬇️⬇️
+  "azureFunctions.deploySubpath": "src/Assistant.ApiApp.SwaFacade/bin/Release/net7.0/publish",
+  "azureFunctions.projectSubpath": "src/Assistant.ApiApp.SwaFacade",
   // ⬆️⬆️⬆️ Uncomment the above two lines if you want to debug API app. ⬆️⬆️⬆️
 
   "azureFunctions.projectLanguage": "C#",
