--- a/src/Assistant.Services.OpenAI/Assistant.Services.OpenAI.csproj
+++ b/src/Assistant.Services.OpenAI/Assistant.Services.OpenAI.csproj
@@ -6,8 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 
-    <AssemblyName>ApimAIAssistant.Services.OpenAI</AssemblyName>
-    <RootNamespace>ApimAIAssistant.Services.OpenAI</RootNamespace>
+    <AssemblyName>ApimPolicyAssistant.Services.OpenAI</AssemblyName>
+    <RootNamespace>ApimPolicyAssistant.Services.OpenAI</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
