--- a/src/Assistant.Services.SwaFacade/Assistant.Services.SwaFacade.csproj
+++ b/src/Assistant.Services.SwaFacade/Assistant.Services.SwaFacade.csproj
@@ -6,12 +6,14 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 
-    <AssemblyName>ApimAIAssistant.Proxies.AssistantProxy</AssemblyName>
-    <RootNamespace>ApimAIAssistant.Proxies.AssistantProxy</RootNamespace>
+    <AssemblyName>ApimPolicyAssistant.Services.SwaFacade</AssemblyName>
+    <RootNamespace>ApimPolicyAssistant.Services.SwaFacade</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <OpenApiReference Include="..\..\infra\swagger-apim-aoai.json" CodeGenerator="NSwagCSharp" Namespace="ApimAIAssistant.Proxies.AssistantProxy" ClassName="AssistantProxyClient" Link="OpenAPIs\swagger-apim-aoai.json" />
+    <OpenApiReference Include="OpenAPIs\v3.yaml" CodeGenerator="NSwagCSharp" Namespace="ApimPolicyAssistant.Services.SwaFacade" ClassName="SwaFacadeClient">
+      <SourceUri>http://localhost:7071/api/openapi/v3.yaml</SourceUri>
+    </OpenApiReference>
   </ItemGroup>
 
   <ItemGroup>
