--- a/src/Assistant.ApiApp.SwaFacade/Assistant.ApiApp.SwaFacade.csproj
+++ b/src/Assistant.ApiApp.SwaFacade/Assistant.ApiApp.SwaFacade.csproj
@@ -7,20 +7,20 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 
-    <AssemblyName>ApimPolicyAssistant.ApiApp</AssemblyName>
-    <RootNamespace>ApimPolicyAssistant.ApiApp</RootNamespace>
+    <AssemblyName>ApimPolicyAssistant.ApiApp.SwaFacade</AssemblyName>
+    <RootNamespace>ApimPolicyAssistant.ApiApp.SwaFacade</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Azure.Functions.Worker" Version="1.18.0" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Http" Version="3.0.13" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.OpenApi" Version="1.5.1" />
-    <PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk" Version="1.12.0" />
+    <PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk" Version="1.13.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Assistant.Models.Examples\Assistant.Models.Examples.csproj" />
-    <ProjectReference Include="..\Assistant.Services.OpenAI\Assistant.Services.OpenAI.csproj" />
+    <ProjectReference Include="..\Assistant.Services.AssistantProxy\Assistant.Services.AssistantProxy.csproj" />
   </ItemGroup>
 
   <ItemGroup>
@@ -36,5 +36,4 @@
   <ItemGroup>
     <Using Include="System.Threading.ExecutionContext" Alias="ExecutionContext" />
   </ItemGroup>
-
 </Project>
