Add Blazor server app

--- a/src/Assistant.Services.SwaFacade/Assistant.Services.SwaFacade.csproj
+++ b/src/Assistant.Services.SwaFacade/Assistant.Services.SwaFacade.csproj
@@ -29,4 +29,8 @@
     <PackageReference Include="System.Runtime.Serialization.Primitives" Version="4.3.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Assistant.Services.OpenApiClient\Assistant.Services.OpenApiClient.csproj" />
+  </ItemGroup>
+
 </Project>
