--- a/src/Assistant.Services.AssistantProxy/Assistant.Services.AssistantProxy.csproj
+++ b/src/Assistant.Services.AssistantProxy/Assistant.Services.AssistantProxy.csproj
@@ -27,4 +27,8 @@
     <PackageReference Include="System.Runtime.Serialization.Primitives" Version="4.3.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Assistant.Services.OpenApiClient\Assistant.Services.OpenApiClient.csproj" />
+  </ItemGroup>
+
 </Project>
