--- a/src/Assistant.WebApp.BlazorWasm/Assistant.WebApp.BlazorWasm.csproj
+++ b/src/Assistant.WebApp.BlazorWasm/Assistant.WebApp.BlazorWasm.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Assistant.Services.SwaFacade\Assistant.Services.SwaFacade.csproj" />
     <ProjectReference Include="..\Assistant.WebApp.Components\Assistant.WebApp.Components.csproj" />
   </ItemGroup>
 
