--- a/src/ApimPolicyAssistant.HybridApp.BlazorMaui/ApimPolicyAssistant.HybridApp.BlazorMaui.csproj
+++ b/src/ApimPolicyAssistant.HybridApp.BlazorMaui/ApimPolicyAssistant.HybridApp.BlazorMaui.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFrameworks>net7.0-android</TargetFrameworks>
     <!-- Uncomment to build an app on MacOS. Make sure that XCode is installed on your build machine -->
-    <!-- <TargetFrameworks>$(TargetFrameworks);net7.0-ios;net7.0-maccatalyst</TargetFrameworks> -->
+    <TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('osx'))">$(TargetFrameworks);net7.0-ios;net7.0-maccatalyst</TargetFrameworks>
     <TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows'))">$(TargetFrameworks);net7.0-windows10.0.19041.0</TargetFrameworks>
     <!-- Uncomment to also build the tizen app. You will need to install tizen by following this: https://github.com/Samsung/Tizen.NET -->
     <!-- <TargetFrameworks>$(TargetFrameworks);net7.0-tizen</TargetFrameworks> -->
@@ -36,6 +36,10 @@
     <TargetPlatformMinVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</TargetPlatformMinVersion>
     <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'tizen'">6.5</SupportedOSPlatformVersion>
   </PropertyGroup>
+
+  <!-- <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net7.0-ios|AnyCPU'">
+    <CreatePackage>false</CreatePackage>
+  </PropertyGroup> -->
 
   <ItemGroup>
     <!-- App Icon -->
@@ -71,6 +75,11 @@
     <EmbeddedResource Include="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Remove="appsettings.Development.json" />
+    <Content Remove="appsettings.json" />
   </ItemGroup>
 
 </Project>
